--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
         "axios": "^1.6.7",
         "core-js": "^3.8.3",
         "cors": "^2.8.5",
+        "jwt-decode": "^4.0.0",
         "pinia": "^2.2.2",
         "vue": "^3.4.27",
+        "vue-cookies": "^1.8.4",
         "vue-router": "^4.3.0",
+        "vue3-cookies": "^1.0.6",
         "vue3-kakao-maps": "^2.3.9"
     },
     "devDependencies": {
