--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "axios": "^1.6.7",
         "core-js": "^3.8.3",
         "cors": "^2.8.5",
+        "jwt-decode": "^4.0.0",
         "pinia": "^2.2.2",
         "vue": "^3.4.27",
         "vue-router": "^4.3.0",
